2007-12-16  Frederic Peters  <fpeters@0d.be>

	* jhbuild/config.py, jhbuild/defaults.jhbuildrc, 
	jhbuild/modtypes/__init__.py, jhbuild/modtypes/autotools.py,
	jhbuild/modtypes/distutils.py, jhbuild/modtypes/mesa.py,
	jhbuild/modtypes/mozillamodule.py, jhbuild/modtypes/perl.py,
	jhbuild/versioncontrol/arch.py, jhbuild/versioncontrol/bzr.py,
	jhbuild/versioncontrol/darcs.py, jhbuild/versioncontrol/git.py,
	jhbuild/versioncontrol/hg.py: added possibility to skip modules that
	have not been updated (with/without considering dependencies).  This
	is driven by a new build_policy configuration option, possible values
	are 'all' (default behaviour, build everything), 'updated' (build only
	modules that have changed) and 'updated-deps' (build modules that have
	changed, or their dependencies have changed).  (closes: #313997)

2007-12-15  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/tarball.py, jhbuild/utils/unpack.py,
	jhbuild/versioncontrol/tarball.py: use native Python modules to unpack
	archives when standard tools (tar, gunzip, bunzip2, unzip) are not
	available; patch by Alberto Ruiz, updated by John Stowers and further
	edited by myself.  (closes: #499497)

2007-12-15  Kjartan Maraas  <kmaraas@gnome.org>

	* modulesets/gnome-external-deps-2.22.modules:
	Updates:
	- cairo -> 1.5.4
	- fontconfig -> 2.5.0
	- gnutls -> 2.0.4
	- opencdk -> 0.6.6

2007-12-15  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/checkbranches.py, jhbuild/modtypes/tarball.py,
	jhbuild/versioncontrol/darcs.py, jhbuild/versioncontrol/git.py,
	jhbuild/versioncontrol/hg.py, jhbuild/versioncontrol/svn.py,
	jhbuild/versioncontrol/tarball.py: fix minor errors, unused code and
	variables, patch by Craig Keogh, completed and edited by myself.
	(closes: #502282)

2007-12-15  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/tarball.py: only unpack tarball if necessary, patch
	by Craig Keogh.

2007-12-15  Frederic Peters  <fpeters@0d.be>
