@@ -52,6 +52,8 @@ makeclean     = False  # run make clean before building
 makecheck     = False  # run make check after building
 makedist      = False  # run make dist after building
 makedistcheck = False  # run make distcheck after building
+trycheckout   = False  # try to force checkout and autogen on failure
+nopoison      = False  # don't poison modules on failure
 
 interact      = True   # whether to interact with the user.
 
